[package]
name = "rsmixer"
version = "0.5.5"
license = "MIT"
homepage = "https://github.com/jantap/rsmixer"
repository = "https://github.com/jantap/rsmixer"
description = "PulseAudio volume mixer written in rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["pulseaudio", "mixer", "volume", "tui", "cli"]
authors = ["Jan Wojcicki <janwojcicki45@gmail.com>"]
edition = "2018"

[features]
default = []
pa_v13 = ["libpulse-binding/pa_v13"]

[dependencies]

# logging
log = "0.4.33"
simple-logging = "2.0.2"
env_logger = "0.11.11"

# general
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
unicode-width = "0.2.2"
state = { version = "0.6.0", features = ["tls"] }
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
crossbeam-channel = "0.5.15"

# error handling
thiserror = "2.0.18"

# config and cli options
serde = { version = "1.0.228", features = ["derive"] }
confy = "2.0.0"
gumdrop = "0.8.1"

# async
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"

# pulseaudio
libpulse-binding = { version = "2.30.1", default-features = false }
semver = "1.0.28"
itertools = "0.15.0"
async-trait = "0.1.89"
anyhow = "1.0.103"
